2002-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h : Imported new composition operators to
 	namespace: NoCompositeOp, DarkenCompositeOp, LightenCompositeOp,
 	HueCompositeOp, SaturateCompositeOp, ValueCompositeOp,
 	ColorizeCompositeOp, LuminizeCompositeOp, ScreenCompositeOp,
 	OverlayCompositeOp.

2001-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (strokePattern): New method to specify image to
 	use as pattern while drawing stroked-outlines of drawn objects.
	(fillPattern): New method to specify image to use as pattern while
 	filling drawn objects.
	(penTexture): Method is officially deprecated.  Don't use anymore.
	(penColor): Method is officially deprecated. Don't use anymore.

	* lib/Drawable.cpp (DrawablePushPattern): Support pushing
 	(starting) pattern definition.
	(DrawablePopPattern): Support popping (terminating) pattern
 	definition.

2001-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Read image
 	immediately if provided by filename, register with peristent
 	registry, and pass as perisistant image type.
	(DrawableCompositeImage): Support specifying Image in memory.
  	Passed as perisistant image type.

2001-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp (operator std::string): Color string buffer was
 	one character too short!

2001-12-20  Bob Friesenhahn  <bfriesen@sun1107.ssd.usa.alcatel.com>

	* lib/TypeMetric.cpp (characterWidth): Eliminate method.
	(characterHeight): Eliminate method.
	(all remaining methods): Change return type to 'double'.  Fix
 	documentation in source files to reflect that units are in pixels
 	rather than points.

2001-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (Magick): Invoke DestroyMagick() to clean up
 	ImageMagick allocations.

	* lib/Magick++/Include.h (ImageType): Added some missing enums to
	Magick namespace.
